--- a/app/src/main/res/layout/activity_number_request.xml
+++ b/app/src/main/res/layout/activity_number_request.xml
@@ -68,9 +68,9 @@
         android:layout_height="29dp"
         android:layout_marginStart="5dp"
         android:layout_marginTop="88dp"
-        android:textAlignment="center"
         android:layout_marginEnd="5dp"
         android:text="@string/or"
+        android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="20sp"
 
@@ -78,37 +78,42 @@
         app:layout_constraintStart_toEndOf="@+id/divider2"
         app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />
 
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="0dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="20dp"
+
+    <!--    <Button-->
+    <!--        android:id="@+id/button3"-->
+    <!--        android:layout_width="0dp"-->
+    <!--        android:layout_height="48dp"-->
+    <!--        android:layout_marginStart="20dp"-->
+    <!--        android:layout_marginTop="26dp"-->
+    <!--        android:layout_marginEnd="20dp"-->
+    <!--        android:backgroundTint="@color/purple_700"-->
+
+    <!--        android:drawableStart="@android:drawable/ic_dialog_email"-->
+    <!--        android:text="@string/continue_with_google"-->
+    <!--        android:textColor="@color/white"-->
+    <!--        app:layout_constraintEnd_toEndOf="parent"-->
+    <!--        app:layout_constraintHorizontal_bias="1.0"-->
+    <!--        app:layout_constraintStart_toStartOf="parent"-->
+    <!--        app:layout_constraintTop_toBottomOf="@+id/login_button" />-->
+
+    <com.facebook.login.widget.LoginButton
+        android:id="@+id/button"
+        android:layout_width="355dp"
+        android:layout_height="460dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="30dp"
 
         android:backgroundTint="@color/purple_700"
-        android:text="@string/continue_with_facebook"
-        android:textColor="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
-
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="0dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="14dp"
-        android:layout_marginEnd="20dp"
-        android:backgroundTint="@color/purple_700"
-        android:drawableStart="@android:drawable/ic_dialog_email"
-        android:textColor="@color/white"
-
-        android:text="@string/continue_with_google"
+        android:minHeight="48dp"
+        android:textAllCaps="true"
+        android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
+        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        tools:ignore="MissingConstraints,TouchTargetSizeCheck" />
+
 
     <Button
         android:id="@+id/button4"
@@ -117,8 +122,8 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="29dp"
         android:layout_marginEnd="20dp"
-        android:text="@string/continue1"
         android:backgroundTint="@color/purple_700"
+        android:text="@string/continue1"
         android:textColor="@color/white"
 
         app:layout_constraintEnd_toEndOf="parent"
